# Legion_runner

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  COMPLIANCE.md  Cargo.toml  Dockerfile  Dockerfile.action  Makefile  PLATFORMS.md  README.md  SECURITY.md  action.yml  deny.toml
.cargo/: config.toml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  dependabot-auto-merge.yml  docker.yml  docs-passthrough.yml  ebpf-agent.yml  enforce-selftest.yml  fim-selftest.yml  harden-selftest.yml  legion-learn.yml  platform.yml  release.yml
action/: baseline.js  cache.js  dnscap.js  dnscap.test.js  ebpf.js  ebpf.test.js  fim.js  fim.test.js  index.js  index.test.js  monitor.js  monitor.test.js  report.js  report.test.js  repos.js  repos.test.js
agent/: Cargo.toml  README.md  rust-toolchain.toml
agent/legionr-bpf/: Cargo.toml  build.rs
agent/legionr-bpf-common/: Cargo.toml
agent/legionr-bpf-common/src/: lib.rs
agent/legionr-bpf-ebpf/: Cargo.toml
agent/legionr-bpf-ebpf/src/: main.rs
agent/legionr-bpf/src/: main.rs
assets/: README.md
crates/legionr-cli/: Cargo.toml
crates/legionr-cli/src/: main.rs
crates/legionr-core/: Cargo.toml
crates/legionr-core/src/: config.rs  container.rs  fim.rs  github.rs  harden.rs  lib.rs  link.rs  runner.rs
crates/legionr-fim/: Cargo.toml
crates/legionr-fim/src/: main.rs
examples/: example-workflow.yml
scripts/: harden.sh  install.sh  platform-audit.sh
systemd/: legionr@.service
