# Legion Runner — eBPF capture agent (aya). Separate workspace so the eBPF
# toolchain (nightly + bpf-linker) never affects the main `cargo build`.
[workspace]
resolver = "2"
# The eBPF crate is NOT a member: it is #![no_std]/#![no_main] and must only be
# built for the BPF target by aya-build (build.rs). Listing it as a member would
# make host `cargo build`/`test` compile it for the host → duplicate panic_impl.
members = ["legionr-bpf", "legionr-bpf-common"]
exclude = ["legionr-bpf-ebpf"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[profile.release]
# eBPF programs must keep debug info (BTF) and not be stripped.
debug = 2
