[package]
name = "legionr-bpf-ebpf"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
aya-ebpf = { git = "https://github.com/aya-rs/aya" }
legionr-bpf-common = { path = "../legionr-bpf-common" }

[[bin]]
name = "legionr-bpf"
path = "src/main.rs"
# Built for the BPF target by the userspace build.rs (aya-build). Profiles are
# inherited from the agent workspace root.
