[package]
name        = "legionr-core"
version.workspace     = true
edition.workspace     = true
authors.workspace     = true
license.workspace     = true
description           = "Core engine: GitHub JIT API, ephemeral runner lifecycle, systemd hardening, Legion link"

[dependencies]
tokio       = { workspace = true }
reqwest     = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
sha2        = { workspace = true }
chrono      = { workspace = true }
anyhow      = { workspace = true }
thiserror   = { workspace = true }
tracing     = { workspace = true }

[dev-dependencies]
tokio       = { workspace = true }
tempfile    = { workspace = true }
